# ProjectGoat-v1.0

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUTOMATION_SETUP.md  BACKEND_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  SECURITY.md  index.html  package.json  playwright.config.ts  projectgoat.db.backup  pyproject.toml  render.yaml  requirements-dev.txt  requirements-postgres.txt  requirements.txt  run.py  vite.config.ts
.claude/: settings.local.json
.claude/commands/: api-endpoints.md  architecture.md  backend-tasks.md  constraints.md  database-schema.md  deploy.md  requirements.md
.github/: CONTRIBUTING.md
.github/workflows/: build-portable.yml
ProjectGoat-Deployment/: README.md  requirements.txt  run.py
ProjectGoat-Deployment/backend/: auth.py  crud.py  database.py  fix_passwords.py  init_db.py  main.py  migrate_add_auth.py  models.py
backend/: __init__.py  auth.py  config.py  crud.py  csrf.py  database.py  fix_passwords.py  init_db.py  init_test_db.py  logging_config.py  main.py  migrate_add_auth.py  migrate_to_multitenancy.py  models.py  rate_limiter.py  requirements.txt  schemas.py  team_crud.py
backend/migrations/: 002_add_security_features.py  003_add_csrf_to_sessions.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_csrf.py  test_rate_limiting.py
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  CONSTRAINTS.md  DATABASE_SCHEMA.md  DEPLOYMENT-STRATEGY.md  DEPLOYMENT.md  REQUIREMENTS.md
docs/architecture/: neurodivergent-features-visual.md  neurodivergent-features.md  system-design.md
docs/audits/: documentation-audit-2025-11-23.md  pre-publish-checklist.md
docs/development/: github-actions-setup.md  render-mcp-automation-plan.md  src-to-frontend-migration.md
docs/guides/: automation-setup.md  environment-variables.md  frontend-development.md  migrations.md  mobile-strategy.md  portable-deployment.md  production-deployment-planning.md  testing.md  troubleshooting.md
docs/plans/: multi-tenancy-implementation.md
playwright-report/: index.html
src/: App.tsx  index.css
src/components/: CalendarView.tsx  ChangePasswordDialog.tsx  DashboardView.tsx  GanttView.tsx  InvitationAcceptScreen.tsx  KanbanView.tsx  ListView.tsx  LoginScreen.tsx  ProfileView.tsx  ProjectDialog.tsx  ProjectSelector.tsx  ProjectsView.tsx  RegistrationScreen.tsx  ReportsView.tsx  SessionTimeoutDialog.tsx  TaskDialog.tsx  TeamSettingsView.tsx  TeamSwitcher.tsx  TeamView.tsx  UserProfileDialog.tsx  ViewModeToggle.tsx  WorkloadView.tsx
src/components/ui/: password-input.tsx
src/data/: mockData.ts
src/services/: api.ts  auth.ts  issues.ts  projects.ts  risks.ts  tasks.ts  users.ts
src/types/: index.ts
src/utils/: session-monitor.ts
test-results/: .last-run.json
test-results/auth-Authentication-should-e8f90-session-across-page-reloads-chromium/: error-context.md
test-results/test-1-editing-existing-task-shows-task-details-chromium/: error-context.md
tests/e2e/: auth.spec.ts  tasks.spec.ts  test-1.spec.ts  test-2.spec.ts  test-3.spec.ts  test-4.spec.ts
