# ProjectGoat Python Tool Configuration
# Centralized configuration for Black, isort, pytest, coverage, and mypy

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectgoat"
version = "1.0.0"
description = "Project management and team collaboration tool"
readme = "README.md"
requires-python = ">=3.11"

# ========================================
# BLACK - Code Formatter
# ========================================
[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.venv
  | venv
  | env
  | build
  | dist
  | migrations
  | \.git
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | node_modules
)/
'''

# ========================================
# ISORT - Import Sorter
# ========================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
    "*/node_modules/*"
]
known_first_party = ["backend"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "uvicorn",
    "bcrypt",
    "pytest"
]

# ========================================
# PYTEST - Testing Framework
# ========================================
[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    --verbose
    --strict-markers
    --tb=short
    --cov=backend
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ========================================
# COVERAGE - Code Coverage
# ========================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    # Standard pragmas
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Type checking
    "if TYPE_CHECKING:",
    "@abstractmethod",
    # Defensive programming
    "except ImportError:",
    "if 0:",
    "if False:",
]

[tool.coverage.html]
directory = "htmlcov"

# ========================================
# MYPY - Static Type Checker
# ========================================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true  # Can remove once all deps have types

# Directories to check
files = ["backend"]

# Exclude patterns
exclude = [
    "migrations/",
    "tests/",
    ".venv/",
    "venv/",
    "env/",
    "build/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
